grabber-4 init codeclimate

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,8 @@ php:
 - 5.4
 install:
 - composer install
+before_script:
+- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+- chmod +x ./cc-test-reporter
+after_script:
+- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
