--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "psr-4": {"antonmarin\\grabberTests\\": "tests/"}
     },
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "sabre/xml": "^1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
